manifests/deploymentIngress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress-basic
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    #nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    #nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200/"
    #nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    #nginx.ingress.kubernetes.io/cors-expose-headers: "Access-Control-Allow-Origin"
spec:
  tls:
    - hosts:
        - amcart-api.centralindia.cloudapp.azure.com
      secretName: amcart-tls-secret 
  ingressClassName: nginx
  rules:
    - host: amcart-api.centralindia.cloudapp.azure.com 
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: amcartauthapi-service
                port:
                  number: 80
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: amcartproductapi-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amcartproductapi-service
                port:
                  number: 80
